Thu Mar 11 21:50:32 CET 2004 (tk)
---------------------------------
  * libclamav: rar: added support for encrypted archive (Encrypted.RAR)
	       detection

Thu Mar 11 00:16:11 CET 2004 (tk)
---------------------------------
  * libclamav: rar support: due to a bug only first file in archive was
	       scanned. Fixed and improved by Dirk Mueller <dmuell*gmx.net>.
  * freshclam, clamscan: fixed logfile permissions (Dirk Mueller)

Wed Mar 10 22:14:45 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Fixed segfault which happens when a UNIX mailbox
  	with more than one message quits because a message before the last
	one can't be parsed

Wed Mar 10 20:51:54 CET 2004 (tk)
---------------------------------
  * doc: + Polish sendmail_clamav how-to updated (Przemyslaw Holowczyc
	   <doozer*skc.com.pl>)
	 + included new Polish how-to on ClamAV and Samba integration (by
	   Przemyslaw Holowczyc)

Wed Mar 10 20:06:35 CET 2004 (tk)
---------------------------------
  * doc: clamav-mirror-howto.pdf and signatures.pdf updated

Wed Mar 10 12:58:55 GMT 2004 (trog)
-----------------------------------
  * clamd/server-th.c: error handling
  * libclamav/ole2_extract.c: change struct pack code to support
	old versions of gcc - for the last time I hope.

Wed Mar 10 11:40:14 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Use new HAVE_STRERROR_R rather than TARGET_OS_SOLARIS
 			to determine if strerror_r exists
			Thanks to Phil Oleson <oz@nixil.net>.
  * docs/man:		Corrected documentation of --postmaster-only flag.

Wed Mar 10 05:43:34 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Implemented a couple of small speed ups:
  	1) Only save arguments that we're going to retrieve
	2) No need to store \n in messageToText fast copy mode, which allows
		an sprintf to be removed (Dirk Mueller <dmuell@gmx.net>)

Wed Mar 10 01:35:40 CET 2004 (tk)
---------------------------------