@@ -1,3 +1,7 @@
+Sat Mar 13 13:52:51 CET 2004 (tk)
+---------------------------------
+  * clamd: support SIGUSR2 and force a database reload
+
 Thu Mar 11 21:50:32 CET 2004 (tk)
 ---------------------------------
   * libclamav: rar: added support for encrypted archive (Encrypted.RAR)
